# haskell-lfsr

./: .gitignore  Makefile  README.md  RunAvg.hs  RunAvgStreaming.hs  RunAvgVector.hs  RunRepeat.hs  RunRepeatAlloca.hs  RunRepeatLoop.hs  lfsr.cabal  stack.yaml
lfsr/: lfsr.c  lfsr.h
src/: LFSR.hs
