name:                lfsr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-lfsr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  Include-dirs:        lfsr
  C-sources:           lfsr/lfsr.c
  exposed-modules:     LFSR
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable run-repeat
  hs-source-dirs:      .
  main-is:             RunRepeat.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lfsr
                     , monad-extras
                     , timeit
  ghc-options: -Wall -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9 
  ghc-prof-options: -fprof-auto

executable run-avg
  hs-source-dirs:      .
  main-is:             RunAvg.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lfsr
                     , monad-extras
                     , timeit
  ghc-options: -Wall -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9 
  ghc-prof-options: -fprof-auto

source-repository head
  type:     git
  location: https://github.com/mcmayer/haskell-lfsr
