name:                lfsr
version:             0.1.0.0
synopsis:            This is the source code for the Stackoverflow question 
                     "Squeezing more performance out of monadic streams in Haskell"
description:         A wrapper around a C implementation of a 16-bit LFSR, 
                     with some benchmarks to investigate the efficiency of Haskell.
homepage:            https://github.com/githubuser/haskell-lfsr#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Mayer
copyright:           2018 Markus Mayer
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  Include-dirs:        lfsr
  C-sources:           lfsr/lfsr.c
  exposed-modules:     LFSR
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable run-repeat
  hs-source-dirs:      .
  main-is:             RunRepeat.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lfsr
                     , monad-extras
                     , timeit
  ghc-options: -Wall -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9
  ghc-prof-options: -fprof-auto

executable run-repeat-alloca
  hs-source-dirs:      .
  main-is:             RunRepeatAlloca.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lfsr
                     , monad-extras
                     , timeit
  ghc-options: -Wall -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9
  ghc-prof-options: -fprof-auto

executable run-avg
  hs-source-dirs:      .
  main-is:             RunAvg.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lfsr
                     , monad-extras
                     , timeit
  ghc-options: -Wall -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9 
  ghc-prof-options: -fprof-auto

executable run-avg-streaming
  hs-source-dirs:      .
  main-is:             RunAvgStreaming.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lfsr
                     , monad-extras
                     , timeit
                     , streaming
  ghc-options: -Wall -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9 
  ghc-prof-options: -fprof-auto


executable run-avg-vector
  hs-source-dirs:      .
  main-is:             RunAvgVector.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lfsr
                     , monad-extras
                     , timeit
                     , vector
  ghc-options: -Wall -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9 
  ghc-prof-options: -fprof-auto

source-repository head
  type:     git
  location: https://github.com/mcmayer/haskell-lfsr
